documentation/2.1.0/manual/detailledTopics/production/ProductionConfiguration.md
<!-- translated -->
<!--
# Additional configuration
-->
# 追加設定

<!--
When running an application in production mode you can override any configuration. This section covers the more common use cases.
-->
アプリケーションを本番モードで実行するときに、任意の設定を上書きすることができます。このセクションでは、この「追加設定」のよくあるユースケースを紹介します。

<!--
All these additional configurations are specified using Java System properties and can be used directly if you are using one of the `start` script generated by Play.
-->
追加設定は Java のシステムプロパティを使って指定します。Play によって生成された `start` スクリプトを利用している場合、Java のシステムプロパテイを `start` スクリプトに直接指定することができます。

<!--
## Specifying the HTTP server address and port
-->
## HTTP サーバーのアドレスとポートを指定する

<!--
You can provide both HTTP port and address. The default is to listen on port `9000` at the `0.0.0.0` address (all addresses).
-->
HTTP ポートとアドレスの両方を指定することができます。デフォルトはポート `9000` 、アドレス `0.0.0.0` （全てのアドレス）です。

```
$ start -Dhttp.port=1234 -Dhttp.address=127.0.0.1
```

<!--
> Note that these configuration are only provided for the default embeded Netty server.
-->
> この設定はデフォルトの組み込み Netty サーバだけが利用します。

<!--
## Specifying additional JVM arguments
-->
## JVM の起動オプションを指定する

<!--
You can specify any JVM arguments to the `start` script. Otherwise the default JVM settings will be used:
-->
`start` スクリプトに JVM の起動オプションを指定することができます。指定しなかった場合は、 JVM のデフォルト設定が利用されます。

```
$ start -Xms128M -Xmx512m -server
```

<!--
## Specifying alternative configuration file
-->
## 代替の設定ファイルを指定する

<!--
The default is to load the `application.conf` file from the classpath. You can specify an alternative configuration file if needed:
-->
デフォルトで読み込まれる設定ファイルはクラスパス上の `application.conf` です。必要に応じて、別の設定ファイルを指定することができます。

<!--
### Using `-Dconfig.resource`
-->
### `-Dconfig.resource` を使う

<!--
It will search for an alternative configuration file in the application classpath (you usually provide these alternative configuration files into your application `conf/` directory before packaging). Play will look into `conf/` so you don't have to add `conf/`.
-->
アプリケーションのクラスパスで代替の設定ファイルを検索します。（普通はこのような代替の設定ファイルを、パッケージング前にアプリケーションの `conf/` ディレクトリに入れておくとよいでしょう。） Play は `conf/` ディレクトリを検索するので `conf/` を加える必要はありません。

```
$ start -Dconfig.resource=prod.conf
```

<!--
### Using `-Dconfig.file`
-->
### `-Dconfig.file` を使う

<!--
You can also specify another local configuration file not packaged into the application artifacts:
-->
アプリケーションのバイナリにパッケージングされていない、ファイルシステム上の設定ファイルを指定することができます。

```
$ start -Dconfig.file=/opt/conf/prod.conf
```

<!--
### Using `-Dconfig.url`
-->
### `-Dconfig.url` を使う

<!--
You can also specify a configuration file to be loaded from any URL:
-->
任意の URL を指定して、設定ファイルをロードすることができます。

```
$ start -Dconfig.url=http://conf.mycompany.com/conf/prod.conf
```

<!--
> Note that you can always reference the original configuration file in a new `prod.conf` file using the `include` directive, such as:
> -->
> このとき、`prod.conf` に次のように `include` 命令を記述すると、元の設定ファイルを参照できます。
> 
> ```
> include "application.conf"
> 
> key.to.override=blah
> ```

<!--
## Overriding specific configuration keys
-->
## 特定の設定キーを上書きする

<!--
Sometimes you don't want to specify another complete configuration file, but just override a bunch of specific keys. You can do that by specifying then as Java System properties:
-->
設定ファイル全体を置き換えたいのではなく、いくつかの設定値キーを上書きできればよい、ということもあるでしょう。その場合は、 Java のシステムプロパティを利用して次のようにします。

```
$ start -Dapplication.secret=verysecretkey -Ddb.default.password=toto
```

<!--
## Using environment variables
-->
## 環境変数を使う

<!--
You can also reference environment variables from your `application.conf` file:
-->
`application.conf` から環境変数を参照することができます。

```
my.key = defaultvalue
my.key = ${?MY_KEY_ENV}
```

<!--
Here, the override field `my.key = ${?MY_KEY_ENV}` simply vanishes if there's no value for `MY_KEY_ENV`, but if you set an environment variable `MY_KEY_ENV` for example, it would be used.
-->
フィールドを上書きする `my.key = ${?MY_KEY_ENV}` という記述をしました。これは、`MY_KEY_ENV` という値がない場合は単に無かった事にされます。しかし、`MY_KEY_ENV` という環境変数が設定されている場合は、環境変数の方が利用されます。

<!--
## Changing the logback configuration file
-->
## logback の設定ファイルを変更する

<!--
### Bundling a custom logback configuration file with your application
-->
### カスタムの logback 設定ファイルをアプリケーションにバンドルする

<!--
Create an alternative logback config file called `application-logger.xml` and copy that to `<app>/conf`
-->
`application-logger.xml` という代理の logback 設定ファイルを作成し `<app>/conf` にコピーします。

<!--
You can also specify another logback configuration file via a System property.
-->
システムプロパティを使って別の logback 設定ファイルを指定することができます。

<!--
### Using `-Dlogger.resource`
-->
### `-Dlogger.resource` を使う

<!--
Specify another loback configuration file to be loaded from the classpath:
-->
別の logback 設定ファイルをクラスパスから読み込みことができます。

```
$ start -Dlogger.resource=conf/prod-logger.xml
```

<!--
### Using `-Dlogger.file`
-->
### `-Dlogger.file` を使う

<!--
Specify another logback configuration file to be loaded from the file system:
-->
別の logback 設定ファイルをファイルシステムから読み込むことができます。

```
$ start -Dlogger.file=/opt/prod/prod-logger.xml
```

<!--
### Using `-Dlogger.url`
-->
### `-Dlogger.url` を使う

<!--
Specify another loback configuration file to be loaded from an URL:
-->
別の logback 設定ファイルを URL から読み込むことができます。

```
$ start -Dlogger.url=http://conf.mycompany.com/logger.xml
```

<!--
## Changing the path of RUNNING_PID
-->
## RUNNING_PID のパスを変更する

<!--
It is possible to change the file path to the created RUNNING_PID file which contains the process id of the started application. Normally this file is placed in the root directory of your play project.
-->
起動したアプリケーションのプロセス ID を記載した、 RUNNING_PID ファイルのパスを変更する事ができます。通常このファイルは play プロジェクトのルートディレクトリに配置されます。

```
$ start -Dpidfile.path=instance1
```
<!--
This changes the directory relative to the root folder. You could also use absolute paths. With this option it is possible to start multiple play instances without colliding RUNNING_PID files (actually play won't start another instance). Don't forget to create the directory.
-->
これでルートフォルダからのディレクトリを変更します。絶対パスも指定することができます。このオプションによってRUNNING_PID ファイルを衝突 (実際には play は他のインスタンスは起動しません) させずに複数の play インスタンスを起動する事が可能になります。ディレクトリの作成を忘れないで下さい。
